<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.onboarding.OnboardingActivity">

    <LinearLayout
        android:id="@+id/title_onboarding_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_subtitle_onboarding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tv_title_onboarding_first"
                style="@style/TextStyle.TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_onboarding_first"/>

            <ImageView
                android:id="@+id/iv_sparkle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_sparkle"
                tools:src="@drawable/ic_sparkle"
                android:layout_marginStart="@id/tv_title_onboarding_first"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_onboarding_second"
            style="@style/TextStyle.TITLE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_onboarding_second"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tv_title_onboarding_third"
                style="@style/TextStyle.TITLE"
                android:textColor="@color/lavender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_onboarding_third"/>

            <ImageView
                android:id="@+id/iv_highlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_highlight"
                tools:src="@drawable/ic_highlight"
                android:layout_marginStart="@id/tv_title_onboarding_third"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_subtitle_onboarding"
        style="@style/TextStyle.SUBTITLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_subtitle_onboarding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_onboarding_layout"
        app:layout_constraintBottom_toTopOf="@id/btn_layout_onboarding"/>

    <LinearLayout
        android:id="@+id/btn_layout_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle_onboarding"
        app:layout_constraintBottom_toTopOf="@id/iv_onboarding">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signin_onboarding"
            style="@style/TextStyle.BUTTON"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_secondary"
            android:text="@string/btn_signin_onboarding"
            android:textColor="@color/lavender"
            app:backgroundTint="@null"
            tools:ignore="VisualLintButtonSize,TextContrastCheck"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup_onboarding"
            style="@style/TextStyle.BUTTON"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_primary"
            android:text="@string/btn_signup_onboarding"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize,TextContrastCheck"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_onboarding"
        app:layout_constraintTop_toBottomOf="@id/btn_layout_onboarding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/img_onboarding"/>

</androidx.constraintlayout.widget.ConstraintLayout>