<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lavender"
    tools:context=".ui.signin.SignInActivity">

    <ImageView
        android:id="@+id/bg_accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bg_accent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_accent"/>

    <TextView
        android:id="@+id/tv_logo"
        style= "@style/TextStyle.LOGO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_logo"
        android:gravity="center"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_memojis"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/iv_memojis"
        app:layout_constraintBottom_toTopOf="@+id/bg_signup_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logo"
        app:srcCompat="@drawable/img_memojis"/>

    <LinearLayout
        android:id="@+id/bg_signup_card"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/bg_card_layout"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck">

        <LinearLayout
            android:id="@+id/title_signup_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_signup_first"
                style="@style/TextStyle.TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:text="@string/tv_title_signup_first"
                tools:alpha="100" />

            <TextView
                android:id="@+id/tv_title_signup_second"
                style="@style/TextStyle.TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:text="@string/tv_title_signup_second"
                android:textColor="@color/lavender"
                tools:alpha="100" />

            <TextView
                android:id="@+id/tv_desc_signup"
                style="@style/TextStyle.SUBTITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/tv_desc_signup"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_signup_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="24dp"
            android:alpha="0"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_signin_layout"
            tools:alpha="100">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email_signup_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.example.snapstory.ui.customview.EmailInputEditText
                    android:id="@+id/input_email_signup"
                    style="@style/TextStyle.INPUT"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:hint="@string/input_email"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password_signup_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:errorEnabled="true">

                <com.example.snapstory.ui.customview.PasswordInputEditText
                    android:id="@+id/input_password_signup"
                    style="@style/TextStyle.INPUT"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            style="@style/TextStyle.BUTTON"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:alpha="0"
            android:background="@drawable/btn_primary"
            android:text="@string/btn_signup"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_signin_layout"
            tools:alpha="100" />

        <LinearLayout
            android:id="@+id/footer_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0"
            android:orientation="horizontal"
            tools:alpha="100">

            <TextView
                android:id="@+id/tv_have_account"
                style="@style/TextStyle.LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_have_account" />

            <TextView
                android:id="@+id/tv_signin"
                style="@style/TextStyle.LABEL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/tv_signin"
                android:textColor="@color/lavender" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_indicator_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/lavender_blue"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>