<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lavender"
    tools:context=".ui.signin.SignInActivity">

    <ImageView
        android:id="@+id/bg_accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bg_accent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/bg_accent"/>

    <TextView
        android:id="@+id/tv_logo"
        style= "@style/TextStyle.LOGO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_logo"
        android:gravity="center"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_memojis"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/iv_memojis"
        app:layout_constraintBottom_toTopOf="@+id/bg_signin_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logo"
        tools:src="@drawable/img_memojis"/>
    
    <LinearLayout
        android:id="@+id/bg_signin_card"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/bg_card_layout"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/title_signin_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_signin_first"
                style="@style/TextStyle.TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_signin_first" />

            <TextView
                android:id="@+id/tv_title_signin_second"
                style="@style/TextStyle.TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_signin_second"
                android:textColor="@color/lavender" />

            <TextView
                android:id="@+id/tv_subtitle_signin"
                style="@style/TextStyle.SUBTITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_subtitle_signin"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_signin_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_signin_layout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email_signin_layout"
                style="@style/TextStyle.INPUT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email_signin"
                    style="@style/TextStyle.INPUT"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_input"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/grey"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password_signin_layout"
                style="@style/TextStyle.INPUT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/grey"
                app:errorIconDrawable="@null"
                android:hint="@string/input_password">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password_signin"
                    style="@style/TextStyle.INPUT"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="@color/grey"
                    android:background="@drawable/bg_input"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signin"
            style="@style/TextStyle.BUTTON"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:background="@drawable/btn_primary"
            android:text="@string/btn_signin"
            app:backgroundTint="@null"
            app:layout_constraintTop_toBottomOf="@id/input_signin_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_donthave_account"
                style="@style/TextStyle.LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_donthave_account"/>

            <TextView
                android:id="@+id/tv_signup"
                style="@style/TextStyle.LABEL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signup"
                android:layout_marginStart="4dp"
                android:textColor="@color/lavender"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>