<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_lavender"
    tools:context=".ui.storydetail.StoryDetailActivity">


    <ImageView
        android:id="@+id/iv_preview_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/iv_preview_story"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/story_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/tv_loading"
        app:titleTextAppearance="@style/TextStyle.VALUE_STORY_NAME"
        app:subtitleTextAppearance="@style/TextStyle.VALUE_STORY_DATE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:title="@string/story_detail_toolbar"/>

    <TextView
        android:id="@+id/tv_story_description"
        style="@style/TextStyle.VALUE_STORY"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:textAlignment="center"
        android:background="@drawable/bg_transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/tv_story_description" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/lavender_blue"
        android:visibility="gone"
        app:indicatorColor="@color/lavender_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>